Code clean up with Minor layout issues fixes DONE

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -210,7 +210,7 @@ input,
 select,
 textarea {
   /* color: rgba(255, 255, 255, 0.55); OLD COLOR FOR TEXT */
-  color: rgba(255, 255, 255, 0.75);
+  color: rgba(255, 255, 255, 0.85);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16.5pt;
   font-weight: normal;
